W10/lab/gatekeeper/templates/04-no-host-network.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnetworkingports
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNetworkingPorts
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostnetworkingports

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "Pod has hostNetwork set to true"
        }
